adding general documentation

--- a/sub3suite/res/files/under_development.html
+++ b/sub3suite/res/files/under_development.html
@@ -42,5 +42,4 @@ Social media: <br>
 	2. <a href="https://twitter.com/sub3suite">telegram</a>.<br>
 <br>
 Authors:<br>
-	3. <a href="https://twitter.com/3nock_">@3nock</a>.<br>
-<h3> Thanks For Using Sub3 Suite...</h3>
+	3. <a href="https://twitter.com/3nock_">@3nock</a>.
