--- a/sub3suite/res/documentation/index.html
+++ b/sub3suite/res/documentation/index.html
@@ -1,1 +1,34 @@
-<h1> Sub3 Suite Documentation </h1>
+<h1> Getting started with Sub3 Suite </h1>
+
+<h2> Launching </h2>
+Download Sub3 Suite for your required platform (Windows, MacOS, or Linux) from <a href=https://github.com/3nock/sub3suite/releases> releases</a>.<br>
+Launch Sub3 Suite by clicking the sub3suite application.<br>
+
+<h2> Startup wizard </h2>
+When Sub3 Suite launches, the startup wizard is displayed. This lets you choose what s3s project to open.<br>
+
+<h3> Selecting a project </h3>
+You can choose from the following options to create or open a project:<br><br>
+
+Temporary project - This option is useful for quick tasks where your work doesn't need to be saved. All data is held in memory, and is lost when s3s exits.<br>
+New project on disk - This creates a new project that will store its data in a Sub3 project file. This file will hold all of the data and configuration for the project, and data is saved incrementally as you work. You can also specify a name for the project.<br>
+Open existing project - This reopens an existing project from a Sub3 project file. A list of recently opened projects is shown for quick selection. When this option is selected, the Spider and Scanner tools will be automatically paused when the project reopens, to avoid sending any unintentional requests to existing configured targets. You can deselect this option if preferred.<br>
+Note: You can rename a project later via project config.<br>
+
+<h2> Tools suite </h2>
+Use the links below for further help on Sub3 Suite Engines:<br>
+1. <a href=engines/osint.html> Osint</a> Engine.<br>
+2. <a href=engines/raw.html> Raw</a> Engine.<br>
+3. <a href=engines/brute.html> Brute</a> Engine.<br>
+4. <a href=engines/active.html> Active</a> Engine.<br>
+5. <a href=engines/dns.html> DNS</a> Engine.<br>
+6. <a href=engines/ssl.html> SSL</a> Engine.<br><br>
+Use the links below for further help on Sub3 Suite Enumerators:<br>
+1. <a href=enums/ip.html> IP</a> Enumerator.<br>
+2. <a href=enums/asn.html> ASN</a> Enumerator.<br>
+3. <a href=enums/cidr.html> CIDR</a> Enumerator.<br>
+4. <a href=enums/ns.html> NS</a> Enumerator.<br>
+5. <a href=enums/mx.html> MX</a> Enumerator.<br>
+6. <a href=enums/ssl.html> SSL</a> Enumerator.<br>
+7. <a href=enums/email.html> Email</a> Enumerator.<br>
+8. <a href=enums/url.html> URL</a> Enumerator.<br>
