--- a/sub3suite/res/documentation/engines/osint.html
+++ b/sub3suite/res/documentation/engines/osint.html
@@ -1,1 +1,60 @@
-<h1> ABOUT OSINT ENGINE </h1>
+<h1> <b> OSINT ENGINE </b> </h1>
+
+The Osint engine is used for obtaining different types of osint data from different input types.<br>
+The tool uses different osint modules to obtain the desired data.<br>
+
+Each Module gets its own thread for querying the same targets. for multiple targets the thread queries on target after
+another due to query request's rate limits impossed by most modules.
+
+<h2> Modules </h2>
+The osint engine uses different osint source to obtain its results.
+The osint modules are mainly categorized in two major groups; Those that require API keys & those that do not require API keys.
+They are further categorized into different sub-groups depending on the type that the osint source majorly deals with.<br>
+
+<h3> The Osint Source's Sub-groups </h3>
+--> Certificates sub-group:  These Osint Sources majorly contains resources associating with SSL Certificates gathered for different sites.<br>
+--> Emails sub-group: These Osint Sources majorly deals with osint of emails.<br>
+--> API sub-group: These are Osint Sources that contain a variety of osint API endpoints.<br>
+--> Archives sub-group: These are Osint Sources containing archives of different internet entities.<br>
+--> Scrape sub-group: These are Osint modules that obtain data by scrapping the indicated search engine.<br>
+--> Site sub-group: These are Osint modules that obtain data from different website containing osint info.<br>
+
+<h2> Features </h2>
+1. Supports different Input types to different Output types.<br>
+2. Supports querying for multiple targets.<br>
+
+<h3> Input Types </h3>
+1. Hostname.<br>
+2. Ip Address.<br>
+3. Email.<br>
+4. Url.<br>
+5. ASN.<br>
+6. SSL Certificate Hash.<br>
+7. CIDR.<br>
+
+<h3> Output Types </h3>
+1. Subdomains.<br>
+2. Subdomain & Ip.<br>
+3. Ip Address.<br>
+4. Email.<br>
+5. Url.<br>
+6. ASN.<br>
+7. SSL Certificate Hash.<br>
+8. CIDR.<br>
+
+<h2> Usage & Examples </h2><br>
+<br><img src="images/osint_1.png"><br>
+Image showing enumeration of Target input "example.com" to obtain subdomain results.<br>
+
+<br><img src="images/osint_2.png"><br>
+Image showing enumeration of Multiple input targets "example.com & google.com" to obtain subdomain results.<br>
+
+<br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
+
+<h2> Blog Posts </h2>
+
+<h2> References </h2>
+1. <a href=https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6>https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6</a>
+
+
+
