--- a/sub3suite/res/documentation/engines/osint.html
+++ b/sub3suite/res/documentation/engines/osint.html
@@ -11,13 +11,13 @@ The osint engine uses different osint source to obtain its results.
 The osint modules are mainly categorized in two major groups; Those that require API keys & those that do not require API keys.
 They are further categorized into different sub-groups depending on the type that the osint source majorly deals with.<br>
 
-<h3> The Osint Source's Sub-groups </h3>
---> Certificates sub-group:  These Osint Sources majorly contains resources associating with SSL Certificates gathered for different sites.<br>
---> Emails sub-group: These Osint Sources majorly deals with osint of emails.<br>
---> API sub-group: These are Osint Sources that contain a variety of osint API endpoints.<br>
---> Archives sub-group: These are Osint Sources containing archives of different internet entities.<br>
---> Scrape sub-group: These are Osint modules that obtain data by scrapping the indicated search engine.<br>
---> Site sub-group: These are Osint modules that obtain data from different website containing osint info.<br>
+<h3> The Osint Source's Sub-groups </h3><br>
+<b>--> Certificates sub-group:</b>  These Osint Sources majorly contains resources associating with SSL Certificates gathered for different sites.<br>
+<b>--> Emails sub-group:</b> These Osint Sources majorly deals with osint of emails.<br>
+<b>--> API sub-group:</b> These are Osint Sources that contain a variety of osint API endpoints.<br>
+<b>--> Archives sub-group:</b> These are Osint Sources containing archives of different internet entities.<br>
+<b>--> Scrape sub-group:</b> These are Osint modules that obtain data by scrapping the indicated search engine.<br>
+<b>--> Site sub-group:</b> These are Osint modules that obtain data from different website containing osint info.<br>
 
 <h2> Features </h2>
 1. Supports different Input types to different Output types.<br>
