--- a/sub3suite/res/documentation/engines/dns.html
+++ b/sub3suite/res/documentation/engines/dns.html
@@ -1,1 +1,34 @@
-<h1> ABOUT DNS ENGINE </h1>
+<h1> DNS ENGINE </h1>
+
+The DNS Engine resolves targets into specified DNS Records.<br>
+This Tool uses multiple threads as alocated by the user to perform enumeration on targets 
+also support use of multiple nameservers as provided by the user or default list by s3s.<br><br>
+
+Records Supported by DNS Engine:<br>
+--> <b> A Records</b>: ipv4 address.<br>
+--> <b> AAAA Records </b>: ipv6 address.<br>
+--> <b> NS Records </b>: Nameservers records.<br>
+--> <b> MX Records </b>: Mail Exchange records.<br>
+--> <b> CNAME Records </b>: Canonical records.<br>
+--> <b> TXT Records </b>: TXT Records.<br>
+--> <b> SRV Records </b>: Service Records.<br><br>
+
+NOTE:<br>
+--> SOA and PTR DNS records are not supported for now.
+
+<h2> Features </h2>
+1. Supports use of multiple nameservers.<br>
+2. Supports A(ipv4), AAAA(ipv6), NS, MX, TXT, CNAME and SRV dns records lookups.<br>
+3. Supports multiple Targets lookup in one scan.<br>
+4. SRV wordlist is also provided and can be modified as per user's liking<br>
+
+<h2> Usage & Examples </h2>
+<br><img src="images/dns_1.png"><br>
+
+<br><img src="images/dns_2.png"><br>
+
+<br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
+
+<h2> Blog Posts </h2>
+
+<h2> References </h2>
