--- a/sub3suite/res/documentation/engines/ssl.html
+++ b/sub3suite/res/documentation/engines/ssl.html
@@ -1,1 +1,24 @@
-<h1> ABOUT SSL ENGINE </h1>
+<h1> SSL ENGINE </h1>
+
+The SSL Engine performs an encrypted connection to target and pulls the target's SSL Certificate to 
+obtain valuable information from the certificates.<br><br>
+
+The Tool returns results as SSL Certificates full info, SSL Cert Hash(sha1 && sha256) & SSL alternative names.<br><br>
+
+This Tool uses multiple threads as alocated by the user to perform enumeration.
+
+
+<h2> Features </h2>
+1. Supports multiple Targets connections in one scan using multiple threads.<br>
+2. Supports enumeration by connecting to host on specified ports eg (HTTP, HTTPS, FTP etc.).<br>
+
+<h2> Usage & Examples </h2>
+<br><img src="images/ssl_1.png"><br>
+
+<br><img src="images/ssl_2.png"><br>
+
+<br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
+
+<h2> Blog Posts </h2>
+
+<h2> References </h2>
