refactored sendTo* implementaion

--- a/sub3suite/res/files/under_development.html
+++ b/sub3suite/res/files/under_development.html
@@ -1,4 +1,4 @@
-<h1> Feature is still UNDER ACTIVE-DEVELOPMENT </h1>
+<h1> This feature is still UNDER ACTIVE-DEVELOPMENT </h1>
 
 Since The Sub3 Suite program is still on its early development stage, Most features are not fully developed yet to be included in this release version.<br>
 But these features are under active development and will be integrated in the coming versions.<br><br>
