--- a/sub3suite/res/documentation/engines/brute.html
+++ b/sub3suite/res/documentation/engines/brute.html
@@ -1,5 +1,6 @@
 <h1> BRUTE ENGINE </h1>
 
+<h2> What is? </h2>
 The BRUTE Engine performs subdomain & TLD enumeration by bruteforce.<br>
 Performs DNS lookup on subdomain & TLD created by appending the words from wordlist to the
 target.<br>
@@ -28,6 +29,8 @@ by the user or default list by s3s.
 
 <br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
 
-<h2> Blog Posts </h2>
-
 <h2> References </h2>
+
+<h2> NOTE: </h2><br>
+<i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
+Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
