--- a/sub3suite/res/documentation/engines/dns.html
+++ b/sub3suite/res/documentation/engines/dns.html
@@ -1,5 +1,6 @@
 <h1> DNS ENGINE </h1>
 
+<h2> What is? </h2>
 The DNS Engine resolves targets into specified DNS Records.<br>
 This Tool uses multiple threads as alocated by the user to perform enumeration on targets 
 also support use of multiple nameservers as provided by the user or default list by s3s.<br><br>
@@ -29,6 +30,8 @@ NOTE:<br>
 
 <br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
 
-<h2> Blog Posts </h2>
-
 <h2> References </h2>
+
+<h2> NOTE: </h2><br>
+<i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
+Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
