--- a/sub3suite/res/documentation/engines/raw.html
+++ b/sub3suite/res/documentation/engines/raw.html
@@ -1,5 +1,6 @@
 <h1> RAW ENGINE </h1>
 
+<h2> What is? </h2>
 The Raw Engine queries API endpoints of different osint modules to return raw json results.<br>
 The tool uses different osint modules and their different endpoints to obtain the desired output.<br><br>
 
@@ -32,10 +33,9 @@ They are further categorized into different sub-groups depending on the type tha
 
 <br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
 
-<h2> Blog Posts </h2>
-
 <h2> References </h2>
 1. <a href=https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6>https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6</a>
 
-
-
+<h2> NOTE: </h2><br>
+<i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
+Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
