--- a/sub3suite/res/documentation/enums/email.html
+++ b/sub3suite/res/documentation/enums/email.html
@@ -1,1 +1,13 @@
-<h1> ABOUT Email Enumerator</h1>
+<h1> Email Enumerator</h1>
+
+<h2> What is? </h2>
+
+<h2> Features </h2>
+
+<h2> Usage & Examples </h2>
+
+<h2> References </h2>
+
+<h2> NOTE: </h2><br>
+<i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
+Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
