--- a/sub3suite/res/documentation/enums/ssl.html
+++ b/sub3suite/res/documentation/enums/ssl.html
@@ -1,1 +1,31 @@
-<h1> ABOUT SSL Enumerator </h1>
+<h1> SSL Enumerator </h1>
+
+<h2> What is? </h2>
+<p style="color:white">
+	<b> SSL/TLS - </b> SSL (Secure Sockets Layer) and its successor, TLS (Transport Layer Security), are protocols for establishing authenticated and encrypted links between networked computers. 
+	Although the SSL protocol was deprecated with the release of TLS 1.0 in 1999, it is still common to refer to these related technologies as "SSL" or "SSL/TLS". 
+	<a href=https://www.ssl.com/faqs/faq-what-is-ssl> reference </a>.<br><br>
+
+	<b> SSL Certificates - </b> SSL certificates make SSL/TLS encryption possible, and they contain the website's public key and the website's identity, along with related information. 
+	Devices attempting to communicate with the origin server will reference this file to obtain the public key and verify the server's identity. The private key is kept secret and secure.
+	<a href=https://www.cloudflare.com/learning/ssl/what-is-an-ssl-certificate> reference </a>.<br><br>
+
+	<b> SSL Enumerator - </b> Is used to enumerate SSL Certificates from targets by passively querying Certificate's hash (sha1 or sha256) to OSINT sources that has SSL Certificates resources such as <a href=https://crt.sh/> crt.sh </a> and pulling the obtained SSL Certificate to
+	obtain all relevant information stored in the certificate that can be useful to map the target.<br>
+	SSL Certificates store important information such as:<br>
+	1. Associated domains.<br>
+	2. Organization name & contacts.<br>
+	3. Issued & Expirely date of the certificate. etc<br><br>
+
+	sub3suite's SSL Enumerator pulls all the data from the SSL Certificate and present it in a very intuitive manner.
+</p>
+
+<h2> Features </h2>
+
+<h2> Usage & Examples </h2>
+
+<h2> References </h2>
+
+<h2> NOTE: </h2><br>
+<i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
+Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
