--- a/sub3suite/res/documentation/engines/osint.html
+++ b/sub3suite/res/documentation/engines/osint.html
@@ -1,5 +1,6 @@
-<h1> <b> OSINT ENGINE </b> </h1>
+<h1> OSINT ENGINE </h1>
 
+<h2> What is? </h2>
 The Osint engine is used for obtaining different types of osint data from different input types.<br>
 The tool uses different osint modules to obtain the desired data.<br>
 
@@ -51,10 +52,9 @@ Image showing enumeration of Multiple input targets "example.com & google.com" t
 
 <br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
 
-<h2> Blog Posts </h2>
-
 <h2> References </h2>
 1. <a href=https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6>https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6</a>
 
-
-
+<h2> NOTE: </h2><br>
+<i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
+Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
