--- a/sub3suite/res/documentation/engines/ssl.html
+++ b/sub3suite/res/documentation/engines/ssl.html
@@ -27,14 +27,9 @@
 2. Supports enumeration by connecting to host on specified ports eg (HTTP, HTTPS, FTP etc.).<br>
 
 <h2> Usage & Examples </h2>
-<br><img src="images/ssl_1.png"><br>
-
-<br><img src="images/ssl_2.png"><br>
-
-<br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
 
 <h2> References </h2>
 
 <h2> NOTE: </h2><br>
 <i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
-Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
+Help improve the <a href=https://github.com/3nock/s3s_doc> documentation </a>.</i>
