--- a/sub3suite/res/documentation/enums/ssl.html
+++ b/sub3suite/res/documentation/enums/ssl.html
@@ -28,4 +28,4 @@
 
 <h2> NOTE: </h2><br>
 <i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
-Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
+Help improve the <a href=https://github.com/3nock/s3s_doc> documentation </a>.</i>
