--- a/sub3suite/res/files/under_development.html
+++ b/sub3suite/res/files/under_development.html
@@ -3,7 +3,7 @@
 Since The Sub3 Suite program is still on its early development stage, Most features are not fully developed yet to be included in this release version.<br>
 But these features are under active development and will be integrated in the coming versions.<br><br>
 
-Follow <a href="https://twitter.com/sub3suite">@sub3suite</a> for more updates on the project progress.
+Follow <a href="https://twitter.com/intent/follow?screen_name=sub3suite&tw_p=followbutton">@sub3suite</a> for more updates on the project progress.
 
 <h2> Contributions </h2><br>
 
@@ -11,35 +11,29 @@ Follow <a href="https://twitter.com/sub3suite">@sub3suite</a> for more updates o
 Please consider contributing to this open source project by any means you can.<br><br>
 All types of contributions are Welcome.<br>
 1. Contribute on the active development of <a href="https://github.com/3nock/sub3suite">sub3suite</a>.<br>
-2. Contribute by writting <a href="https://github.com/3nock/sub3suite">translations</a> of the program to different languages.<br>
-3. Contribute by writting articles and blog post about Sub3 Suite.<br>
+3. Contribute by writting articles and blog post about <b>Sub3 Suite</b>.<br>
 4. Contribute by writting <a href=https://github.com/3nock/s3s_doc>documentation</a> & different ways of using the tools for osint info gathering.<br>
 5. Contribute by Reporting <a href="https://github.com/3nock/sub3suite/issues">bugs!</a>.<br>
 6. Contribute by Requesting <a href="https://github.com/3nock/sub3suite/issues">New Features!</a>.<br>
 7. Contribute by Sharing about the program to peers.<br>
 8. Contribute by Extensively using the program on your work :)<br>
-9. Monetary Contributions are also highly welcomed :)<br>
 
 <h2> Sponsoring </h2>
-Please consider <a href="https://github.com/3nock/sub3suite/SPONSOR.md">sponsoring</a> the project with any amount is highly appreciated.<br>
+Please consider <a href="https://github.com/3nock/sub3suite/blob/main/SPONSOR.md">sponsoring</a> the project with any amount is highly appreciated.<br>
 If my work is earning you money, consider becoming a sponsor! It would mean A WHOLE LOT.<br>
-Also if you are looking to partner up on the project feel free to contact: sub3suite@protonmail.com.<br>
+Also if you are looking to partner up on the project feel free to contact us.
 
 <h2> License </h2>
 This Software is released under the GNU General Public License v3.0<br>
 
 <h2> Contacts </h2>
 Email:<br>
-	1. sub3suite@protonmail.com.<br>
+	1. sub3suite@gmail.com.<br>
 	2. 3nock@protonmail.com.<br>
-<br>
-Site:<br>
-	1. <a href="https://github.com/3nock/sub3suite">sub3suite</a>.<br>
-	2. <a href="https://3nock.github.io/">blog</a>.<br>
 <br>
 Social media: <br>
 	1. <a href="https://twitter.com/sub3suite">twiiter</a>.<br>
-	2. <a href="https://twitter.com/sub3suite">telegram</a>.<br>
+	2. <a href="https://t.me/sub3suite">telegram</a>.<br>
 <br>
 Authors:<br>
 	3. <a href="https://twitter.com/3nock_">@3nock</a>.
