--- a/sub3suite/res/documentation/engines/active.html
+++ b/sub3suite/res/documentation/engines/active.html
@@ -20,14 +20,9 @@ by the user or default list by s3s.
 6. Supports enumeration by Pinging The targets.
 
 <h2> Usage & Examples </h2>
-<br><img src="images/active_1.png"><br>
-
-<br><img src="images/active_2.png"><br>
-
-<br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
 
 <h2> References </h2>
 
 <h2> NOTE: </h2><br>
 <i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
-Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
+Help improve the <a href=https://github.com/3nock/s3s_doc> documentation </a>.</i>
