--- a/sub3suite/res/documentation/engines/osint.html
+++ b/sub3suite/res/documentation/engines/osint.html
@@ -44,17 +44,10 @@ They are further categorized into different sub-groups depending on the type tha
 8. CIDR.<br>
 
 <h2> Usage & Examples </h2><br>
-<br><img src="images/osint_1.png"><br>
-Image showing enumeration of Target input "example.com" to obtain subdomain results.<br>
-
-<br><img src="images/osint_2.png"><br>
-Image showing enumeration of Multiple input targets "example.com & google.com" to obtain subdomain results.<br>
-
-<br> <a href=https://github.com/3nock/sub3suite>Help improve the documentation...</a><br>
 
 <h2> References </h2>
 1. <a href=https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6>https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6</a>
 
 <h2> NOTE: </h2><br>
 <i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
-Help improve the <a href=https://github.com/3nock/sub3suite_doc> documentation </a>.</i>
+Help improve the <a href=https://github.com/3nock/s3s_doc> documentation </a>.</i>
